# MoviePilot-Plugins

./: README.md  package.json  package.v2.json
.github/workflows/: release.yml
docs/cleaninvalidplugin/: README.md
docs/plex302reverseproxy/: README.md
docs/plextoolbox/: README.md
docs/subscribeplus/: README.md
plugins.v2/cleaninvalidplugin/: README.md  __init__.py  package.json  vite.config.js
plugins.v2/downloadsitetag/: __init__.py
plugins.v2/downloadsitetag1/: __init__.py
plugins.v2/p115strmhelper/: README.md  __init__.py  api.py  bundle.json  migration_meta.json  requirements.txt  sidebar_nav.py  version.py
plugins.v2/p115strmhelper/rust_utils/full_strm_sync/: .gitignore  Cargo.toml  pyproject.toml
plugins.v2/p115strmhelper/rust_utils/full_strm_sync/src/: lib.rs  processor.rs  types.rs
plugins.v2/plex302reverseproxy/: __init__.py  proxy_app.py
plugins.v2/plextoolbox/: __init__.py  emby_client.py  ffprobe_source.py  helper_client.py  index.html  mediainfo.py  package-lock.json  package.json  plex_client.py  poster_fixer.py  proxy_app.py  scrape_tools.py  vite.config.js
plugins.v2/shortplaymonitor/: __init__.py
plugins.v2/subscribeplus/: .gitignore  __init__.py  diagnosis.py  identifiers.py  index.html  models.py  package-lock.json  package.json  pnpm-workspace.yaml  romaji.py  rules.py  scan_batch.py  (+6 more)
plugins/p115strmhelper/rust_utils/share_strm_scan/: Cargo.toml  pyproject.toml
plugins/p115strmhelper/rust_utils/share_strm_scan/python/share_strm_scan/: __init__.py
plugins/p115strmhelper/rust_utils/share_strm_scan/src/: query.rs
(+351 files in other folders)
