[package]
name = "share_strm_scan"
version = "0.2.1"
edition = "2021"

[lib]
name = "share_strm_scan"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.0", features = ["extension-module"] }
rayon = "1.12"
walkdir = "2"
memchr = "2.7"
ahash = "0.8"
url = "2.5"

[profile.release]
lto = true
codegen-units = 1
